
ccoinincludedir=$(includedir)/ccoin

ccoininclude_HEADERS = \
	address.h	\
	addr_match.h	\
	base58.h	\
	blkdb.h		\
	bloom.h		\
	buffer.h	\
	buint.h		\
	checkpoints.h	\
	clist.h		\
	compat.h	\
	coredefs.h	\
	core.h		\
	cstr.h		\
	endian.h	\
	hashtab.h	\
	hdkeys.h	\
	hexcode.h	\
	hmac.h		\
	key.h		\
	mbr.h		\
	message.h	\
	net.h		\
	parr.h		\
	script.h	\
	serialize.h	\
	sha1.h		\
	sha2.h		\
	util.h		\
	wallet.h
